# open-anamnesis

./: .gitignore  CONTRIBUTING.md  FILES_INVENTORY.md  PROJECT_SETUP_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py  test-server.py
.github/workflows/: static.yml
docs/: ARCHITECTURE.md  GUIDE.md
examples/: README.md
examples/anamnesis_cli/.claude/: settings.local.json
examples/anamnesis_cli/decks/creating_content/: validation_rules.json
examples/anamnesis_cli/decks/project_structure/: build_directory.json
examples/python_learning_path/: project.yml
examples/python_learning_path/decks/01_basics/: cards.json
examples/python_learning_path/decks/02_functions/: cards.json  deck.yml
examples/python_learning_path/decks/03_oop/: cards.json  deck.yml
examples/python_learning_path/decks/04_data_structures/: cards.json  deck.yml
examples/python_learning_path/decks/05_error_handling/: cards.json  deck.yml
examples/python_learning_path/decks/06_file_io/: cards.json  deck.yml
examples/python_learning_path/decks/07_modules_packages/: cards.json  deck.yml
examples/python_learning_path/decks/08_libraries/: cards.json  deck.yml
examples/python_learning_path/decks/09_functional_programming/: cards.json  deck.yml
open_anamnesis/: __init__.py  builder.py  card.py  cli.py  deck.py  project.py
src/open_anamnesis/: __init__.py  builder.py  card.py  cli.py  compiler.py  deck.py  project.py
src/open_anamnesis/static/: app.js  style.css
src/open_anamnesis/templates/: index.html
tests/: __init__.py  test_core.py
(+299 files in other folders)
